// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineDeploymentTable should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="ec47sgk-el-mb11 ejadz4k-el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
      >
        <div
          class="e1ijk5il-el-table-headers-row"
        >
          <div
            class="e1co3p83-el-table-header"
          >
            Release Type
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Created
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Status
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Version
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Currently Deployed
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            <span
              class="ej9yrfo-el-icon"
              style="font-size: 1.2rem;"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="es3tf1j-el-table-row-container"
        >
          <div
            class="e1qy4g2u-el-table-row"
          >
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Release Type"
              >
                Unknown
              </div>
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Created"
              >
                20 Apr 2022 02:30:26
              </div>
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Status"
              >
                <span
                  class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
                />
                Succeeded
              </div>
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Version"
              />
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Currently Deployed"
              >
                Deployed
              </div>
            </div>
            <div
              class="e1fmntjl-el-table-expandable-row-trigger-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="e3q521i-el-table-expandable-row"
          >
            <div
              class="eygkx5t-el-table-expandable-container"
            >
              <div
                class="ejadz4k-el-table"
              >
                <div
                  class="f141c8gf-four-col-table e1ijk5il-el-table-headers-row"
                >
                  <div
                    class="e1co3p83-el-table-header"
                  >
                    Task
                  </div>
                  <div
                    class="e1co3p83-el-table-header"
                  >
                    Status
                  </div>
                  <div
                    class="e1co3p83-el-table-header"
                  >
                    Started
                  </div>
                  <div
                    class="e1co3p83-el-table-header"
                  >
                    Finished
                  </div>
                </div>
                <div
                  class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
                >
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      Download Source
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      <span
                        class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
                      />
                      Succeeded
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                </div>
                <div
                  class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
                >
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      Install
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      <span
                        class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
                      />
                      Succeeded
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                </div>
                <div
                  class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
                >
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      Build
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      <span
                        class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
                      />
                      Succeeded
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                </div>
                <div
                  class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
                >
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      Deploy
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      <span
                        class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
                      />
                      Succeeded
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                  <div
                    class="e1gfmg2g-el-table-cell"
                  >
                    <div
                      class="e4zpaja-el-table-cell-content"
                    >
                      -
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="e1s056ze-el-mt6"
              >
                <button
                  class="epibvz0-el-intent-secondary e1tqqdf9-el-button"
                  disabled=""
                >
                  Logs Expired
                  <div
                    class="e1q1vabn-el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1nnyshg-el-pagination-wrap"
      >
        <div
          class="ex6bmfc-el-pagination-text"
        >
          <input
            class="e1yynswi-el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="e1g9l338-el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="e1g9l338-el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="ec47sgk-el-mb11 ejadz4k-el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="5"
    >
      <div
        class="e1ijk5il-el-table-headers-row"
      >
        <div
          class="e1co3p83-el-table-header"
        >
          Release Type
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Created
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Status
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Version
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Currently Deployed
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          <span
            class="ej9yrfo-el-icon"
            style="font-size: 1.2rem;"
          >
            <svg />
          </span>
        </div>
      </div>
      <div
        class="es3tf1j-el-table-row-container"
      >
        <div
          class="e1qy4g2u-el-table-row"
        >
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Release Type"
            >
              Unknown
            </div>
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Created"
            >
              20 Apr 2022 02:30:26
            </div>
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Status"
            >
              <span
                class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
              />
              Succeeded
            </div>
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Version"
            />
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Currently Deployed"
            >
              Deployed
            </div>
          </div>
          <div
            class="e1fmntjl-el-table-expandable-row-trigger-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="e3q521i-el-table-expandable-row"
        >
          <div
            class="eygkx5t-el-table-expandable-container"
          >
            <div
              class="ejadz4k-el-table"
            >
              <div
                class="f141c8gf-four-col-table e1ijk5il-el-table-headers-row"
              >
                <div
                  class="e1co3p83-el-table-header"
                >
                  Task
                </div>
                <div
                  class="e1co3p83-el-table-header"
                >
                  Status
                </div>
                <div
                  class="e1co3p83-el-table-header"
                >
                  Started
                </div>
                <div
                  class="e1co3p83-el-table-header"
                >
                  Finished
                </div>
              </div>
              <div
                class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
              >
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    Download Source
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    <span
                      class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
                    />
                    Succeeded
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    -
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    -
                  </div>
                </div>
              </div>
              <div
                class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
              >
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    Install
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    <span
                      class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
                    />
                    Succeeded
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    -
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    -
                  </div>
                </div>
              </div>
              <div
                class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
              >
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    Build
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    <span
                      class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
                    />
                    Succeeded
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    -
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    -
                  </div>
                </div>
              </div>
              <div
                class="f141c8gf-four-col-table e1qy4g2u-el-table-row"
              >
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    Deploy
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    <span
                      class="e11oi1zt-el-intent-success e1cp9zgf-el-status-indicator"
                    />
                    Succeeded
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    -
                  </div>
                </div>
                <div
                  class="e1gfmg2g-el-table-cell"
                >
                  <div
                    class="e4zpaja-el-table-cell-content"
                  >
                    -
                  </div>
                </div>
              </div>
            </div>
            <div
              class="e1s056ze-el-mt6"
            >
              <button
                class="epibvz0-el-intent-secondary e1tqqdf9-el-button"
                disabled=""
              >
                Logs Expired
                <div
                  class="e1q1vabn-el-button-loader"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="e1nnyshg-el-pagination-wrap"
    >
      <div
        class="ex6bmfc-el-pagination-text"
      >
        <input
          class="e1yynswi-el-pagination-input"
          value="1"
        />
         of 
        1
      </div>
      <button
        class="e1g9l338-el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </button>
      <button
        class="e1g9l338-el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PipelineDeploymentTable should match snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
